<resources>
    <string name="app_name">SalCo</string>
    <string name="time_in_work">Time in work</string>
    <string name="sum_of_time">Sum of Time</string>
    <string name="current_salary">Current Salary</string>
    <string name="sum_of_salary">Sum of Salary</string>
    <string name="BSW">\u0020 Start working \u0020</string>
    <string name="SSW">\u0020 Stop working \u0020</string>
    <string name="time_counter">00ч 00м 00с 000мс</string>
    <string name="time_counter_sum">000ч 00м 00с</string>
    <string name="salary_counter">000,000р 00к</string>
    <string-array name="test_spinner">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
        <item>test5</item>
        <item>test6</item>
    </string-array>
</resources>
